executable("ws_client") {
  sources = [
    "src/main.cpp",
    "src/cli/cli.cpp",
    "src/websocket/websocket_client.cpp",
  ]

  include_dirs = [
    "third_party/cli11",
    "C:/msys64/ucrt64/include",
  ]

  libs = [
    "ws2_32",   # Windows Sockets 2
    "wsock32",  # Windows Sockets (legacy, sometimes needed)
  ]
}